--- a/about.html
+++ b/about.html
@@ -113,6 +113,9 @@
 					<div class="col-lg-4">
 						<img src="https://res.cloudinary.com/sammiestarks/image/upload/v1760085698/Untitled_Artwork_5_tjwey6.png" alt="" class="img-fluid">
 					</div>
+					<div class="col-lg-12">
+						<a href="https://res.cloudinary.com/sammiestarks/image/upload/v1760333052/AkweSamuelResume2025_ny6ten.pdf" class="btn btn-dark" target="_blank">Download Resume</a>
+					</div>
 				</div>
 				
 			</div>
@@ -229,8 +232,8 @@
 	<div class="container">
 		<div class="row align-items-center bg-dark p-5">
 			<div class="col-lg-8">
-				<h4 class="text-white mb-0">Want to discuss about any project? Don't be shy</h4>
-				<h2 class="text-white mb-0">Contact me at <span id="copyMe">sammiestarks@gmail.com </span></h2>
+				<h4 class="text-white mb-0">Want to discuss about any project? Let’s build something meaningful</h4>
+				<h3 class="text-white mb-0">Contact me at <span id="copyMe">sammiestarks@gmail.com </span></h3>
 				<i class="fas fa-copy"></i>
 			</div>
 			<div onclick="clickMe()" onmouseout="showMe()" class="col-lg-4 text-lg-right mt-5 mt-lg-0">
