--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
   <meta charset="utf-8">
   <title>Akwe-Samuel Portfolio</title>
 
+     <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Akwe-Samuel Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://res.cloudinary.com/sammiestarks/image/upload/v1760194806/Screenshot_2025-10-11_at_15.58.38_mt2edw.png" />
+    <meta property="og:url" content="index.html" />
+    <meta property="og:description" content="With over six years of experience, Samuel is a Senior Product Designer and emerging UX Product Manager specializing in fintech solutions. He combines a deep understanding of agile delivery, accessibility, and design principles with UXPM practices to align user needs with business outcomes. His work focuses on creating compelling user interfaces that drive acquisition and activation while reducing design and product risk for early-stage startups and fintech companies." />
+    <meta property="og:site_name" content="Akwe-Samuel Portfolio" />
+    <meta property="og:locale" content="en_US" />
+
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
