--- a/about.html
+++ b/about.html
@@ -232,7 +232,7 @@
 	<div class="container">
 		<div class="row align-items-center bg-dark p-5">
 			<div class="col-lg-8">
-				<h4 class="text-white mb-0">Want to discuss about any project? Let’s build something meaningful</h4>
+				<h4 class="text-white mb-0">Want to discuss about any project? <span style="color: #ffa332;">Let’s build something meaningful</span></h4>
 				<h3 class="text-white mb-0">Contact me at <span id="copyMe">sammiestarks@gmail.com </span></h3>
 				<i class="fas fa-copy"></i>
 			</div>
