--- a/portfolio-single7.html
+++ b/portfolio-single7.html
@@ -97,7 +97,7 @@
 
 <section class="section portfolio-single">
 	<div class="container">
-		<div class="row">
+		<div class="row flex-container">
 			<div class="col-lg-6">
 				<img id="theImageModal" src="https://res.cloudinary.com/sammiestarks/image/upload/v1760108670/glover_xjbky3.png" alt="" class="img-fluid w-100" id="thisImage">
 			</div>
@@ -105,15 +105,28 @@
 			<div class="col-lg-6">
 				<div class="project-info">
 					<h3 class="mt-3">Overview</h3>
-					<p>Glover is a versatile gift card application offering an array of features, including airtime recharge, electric payment, data and internet subscription, airtime to cash conversion, perfect money, and e-ticket purchasing.</p>
-                    <h3>Problem Statement</h3>
-                    <p>Our Glover mobile app aims to serve as a comprehensive platform for gift card purchases, airtime and data recharge, and other transaction services. However, we observed a significant drop-off in customers during the KYC flow required for user activation, particularly due to the necessity of inputting their bank verification number (BVN). Additionally, our platform lacks certain features crucial for enhancing customer retention.</p>
+					<p>I redesigned the Glover mobile experience to reduce KYC-related drop-offs, introduce alternative payment methods, and streamline onboarding. By making KYC optional for specific services and improving navigation, we increased user retention by 10% and improved app ratings from 3.5 to 4.2 stars.</p>
+					<p>Glover is a multifunctional financial utility app that allows users to:</p>
+					<ol>
+						<li>Purchase gift cards</li>
+						<li>Convert airtime to cash</li>
+						<li>Buy data & internet subscriptions</li>
+						<li>Pay electricity bills</li>
+						<li>Purchase e-tickets</li>
+						<li>Use Perfect Money and other payment options</li>
+					</ol>
+					<p>The app aims to serve as a one-stop hub for digital transactions.</p>
 
+					<h4>Role</h4>
+					<h5>Product Designer (UX/UI)</h5>
+					<p>Responsible for research, mapping user pain points, redesigning user activation flows, and improving the app structure to increase retention.</p>
+
+                
 					<div class="row mt-4">
 						<div class="col-lg-6">
 							<div class="info">
 								<h5 class="mb-0">Client</h5>
-								<p>Concept</p>
+								<p>Glover</p>
 							</div>
 
 							<div class="info">
@@ -128,7 +141,7 @@
 						<div class="col-lg-6">
 							<div class="info">
 								<h5 class="mb-0">Category</h5>
-								<p>Mobile Banking </p>
+								<p>Mobile Banking / Fintech</p>
 							</div>
 							<!-- <div class="info">
 								<h5>Share</h5>
@@ -146,15 +159,26 @@
         <div class="row container eachSection">
             <div class="flex-container">
 			    <div class="col-lg-6">
-                    <h3>Research and Analysis</h3>
-			        <p>We conducted user interviews, surveys, and competitive analysis to understand the pain points. Key findings included:</p>
-                    <ul>
-                        <li><b>30%</b> of users abandoned the app during the KYC verification due to privacy concerns.</li>
-                        <li>Users expressed a desire for alternative payment methods.</li>
-                    </ul>
-                    <h3>Hypothesis</h3>
-                    <p>We hypothesized that removing the requirement for KYC verification for certain services and offering alternative payment options would improve user activation and retention.</p>
-                    <p>Based on both qualitative and quantitative data, we believe that removing the requirement for KYC verification to access certain services and offering alternative forms of payment will improve user activation and retention.</p>
+					<h3>Problem / Challenge</h3>
+					<h5>Key Issue: High Drop-Off During KYC (BVN Entry)</h5>
+                    <p>We observed a major activation problem:</p>
+					<p>30% of users abandoned the app during the mandatory KYC step, citing:</p>
+					<ol>
+						<li>Lack of trust in entering BVN</li>
+						<li>Privacy and security concerns</li>
+						<li>Unclear reasons for verification</li>
+						<li>The requirement blocking access to most features</li>
+					</ol>
+
+                    <h5>Additional Retention Challenges</h5>
+			        <ol>
+						<li>No alternative payment methods</li>
+						<li>Confusing navigation</li>
+						<li>Limited access to basic services prior to KYC</li>
+						<li>Users unable to continue transactions after leaving the app</li>
+						<li>Difficulty retrieving receipts when re-opening</li>
+					</ol>
+					<p>These issues collectively reduced activation, engagement, and long-term retention.</p>
 			    </div>
 			    <div class="col-lg-6">
 				    <img src="https://res.cloudinary.com/sammiestarks/image/upload/v1760109911/glovereseach_jkf0zx.png" class="img-fluid w-100">
@@ -163,11 +187,92 @@
 		    </div>
         </div>
 
-        <div class="container eachSection">
-            <h3>Design Process</h3>
-			<p><span class="listNumber mr-1">1</span><span class="listTitle">Site Map Development</span> – Spearheaded the development of the site map to streamline navigation and reduce barriers to accessing services.</p>
-            <p><span class="listNumber mr-1">2</span><span class="listTitle">Wireframes and Prototypes</span> – Created detailed wireframes and interactive prototypes. Conducted usability testing to gather user feedback and iterated on the designs based on insights.</p>
-            <p><span class="listNumber mr-1">3</span><span class="listTitle">Feature Implementation</span> – Introduced alternative payment methods and redesigned the user activation flow to make KYC optional for specific transactions.</p>
+		<div class="row container eachSection">
+			<h3>Approach / Process</h3>
+			<div class="row container">
+				<div class="col-lg-6">
+					<h4>1. Research & Analysis</h4>
+					<p>We conducted:</p>
+					<ol>
+						<li>User interviews</li>
+						<li>In-app survey</li>
+						<li>Competitive benchmarking (vs giftcards, egifter)</li>
+					</ol>
+
+					<h5>Key Insights</h5>
+					<ol>
+						<li>Users wanted choice in how they pay</li>
+						<li>Many were uncomfortable providing BVN upfront</li>
+						<li>Competitors allowed access to basic transactions without full verification</li>
+						<li>Users requested clearer instructions and receipt access</li>
+					</ol>
+				</div>
+			<div class="col-lg-6">
+				<h4>2. Hypothesis</h4>
+				<p>If we remove mandatory KYC for non-sensitive services and introduce more flexible payment methods, then:</p>
+				<ol>
+					<li>More users will complete activation</li>
+					<li>User retention will increase</li>
+					<li>App trust will improve</li>
+					<li>ngagement across transaction services will grow</li>
+				</ol>
+				<p>This became our core design direction.</p>
+			</div>
+		</div>
+		</div>
+	
+        <div class="row container eachSection">
+			<div class="col-lg-6">
+				<h3>3. Design Process</h3>
+				<p><span class="listNumber mr-1">1</span><span class="listTitle">Site Map Redesign</span> – Created a cleaner, frictionless site map:</p>
+				<ol>
+					<li>Reduced steps to access services</li>
+					<li>Grouped core utilities (airtime, data, electricity, etc.)</li>
+					<li>Moved KYC into a “progressive onboarding” flow</li>
+				</ol>
+            	<p><span class="listNumber mr-1">2</span><span class="listTitle">Wireframes and Prototypes</span> – Designed low-fidelity wireframes for rapid validation. Built interactive prototypes outlining:</p>
+				<ol>
+					<li>Optional KYC path</li>
+					<li>New payment flow</li>
+					<li>Receipt retrieval workflow</li>
+				</ol>
+				<p>Conducted usability testing to validate ease of:</p>
+				<ol>
+					<li>Navigation</li>
+					<li>Payment selection</li>
+					<li>Account verification flow</li>
+				</ol>
+           		<p><span class="listNumber mr-1">3</span><span class="listTitle">Feature Implementation</span></p>
+				<ol>
+					<li>Introduced alternative payment methods</li>
+					<li>Made KYC optional for basic services</li>
+					<li>Improved receipt history and retrieval access</li>
+					<li>Added clearer microcopy explaining why KYC is required for certain features</li>
+				</ol>
+			</div>
+
+			<div class="col-lg-6">
+				<h3>4. Solution</h3>
+				<p><span class="listNumber mr-1">1</span><span class="listTitle">Optional KYC Flow</span> – Instead of forcing users through BVN entry, we:</p>
+				<ol>
+					<li>Allowed use of basic services without it</li>
+					<li>Used progressive disclosure to introduce KYC only when required</li>
+					<li>Added privacy explanations to build trust</li>
+				</ol>
+            	<p><span class="listNumber mr-1">2</span><span class="listTitle">Alternative Payment Methods</span> – Added:</p>
+				<ol>
+					<li>Card payments</li>
+					<li>Wallet balance</li>
+					<p>This solved a major retention barrier.</p>
+				</ol>
+			
+           		<p><span class="listNumber mr-1">3</span><span class="listTitle">Improved Navigation & App Structure</span></p>
+				<ol>
+					<li>Simplified the home layout</li>
+					<li>Reduced friction by removing unnecessary steps</li>
+					<li>Created a clearer path to all major services</li>
+				</ol>
+			</div>
         </div>
 
         <div class="row container heuristics">
@@ -179,13 +284,14 @@
 		</div>
 
         <div class="container eachSection">
-            <h3>Implementation and Results</h3>
+            <h3>Outcomes / Results</h3>
 			<div class="flex-container">
 			    <div class="col-lg-12">
                     <ul>
-                        <li><span class="listTitle">User Feedback Rating</span> - Improved the user feedback rating from 3.5 to 4.2 stars.</li>
-                        <li><span class="listTitle">User Retention</span> - Increased user retention by 10% through the introduction of alternative payment methods.</li>
-                        <li><span class="listTitle">Revenue Impact</span> - Many users noted that once they exited the app after making a payment, they couldn’t retrieve a receipt when they logged back in.</li>
+                        <li><span class="listTitle">App Store Rating Improved from 3.5 → 4.2 stars</span> - Driven by reduced frustration and clearer flows.</li>
+                        <li><span class="listTitle">User Retention Increased by 10%</span> - The combination of optional KYC + alternative payment methods kept users active.</li>
+                        <li><span class="listTitle">Drop-off during KYC significantly reduced</span> - Users could now explore and transact before fully verifying.</li>
+						<li><span class="listTitle">Clearer communication improved trust</span> - Privacy-focused microcopy and transparent flow design addressed user concerns.</li>
                     </ul>
 			    </div>
 		    </div>
@@ -222,12 +328,18 @@
 
 		<div class="row container eachSection">
 			<div class="col-lg-6">
-				<h3>Challenges and Learnings</h3>
-                <p>One challenge was balancing security requirements with user convenience. We learned that providing clear communication about data privacy and security can alleviate user concerns.</p>
+				<h3>5. Challenges and Learnings</h3>
+				<h5>Balancing Security With Convenience</h5>
+                <p>KYC is necessary—but forcing it early created drop-offs.</p>
+				<p>We learned that timely, contextual, progressive onboarding is key.</p>
+				<h5>Building Trust With Transparency</h5>
+				<p>Explaining why BVN is requested reduced user anxiety.</p>
+				<h5>Frictionless Access > Full Verification</h5>
+				<p>Fintech users respond better when they can try the product before deep verification.</p>
 			</div>
 			<div class="col-lg-6">
-				<h3>Conclusion and Next Steps</h3>
-                <p>The enhancements significantly improved user experience and retention. Plans include further refining the user journey based on ongoing feedback and exploring additional features to enhance user engagement.</p>
+				<h3>Conclusion</h3>
+                <p>These improvements position Glover as a more user-friendly, competitive fintech product focused on accessibility and trust.</p>
             </div>
 		</div>
 
