--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -160,7 +160,7 @@
 				<ol>
   					<li>Users spent too long identifying high-value trends</li>
   					<li>Important metrics were often missed due to poor labeling & layout</li>
-  					<li>Complaints and feature usage required excessive back-and-forth navigationch</li>
+  					<li>Complaints and feature usage required excessive back-and-forth navigation</li>
 				</ol> 
 			</div>
 			<div class="col-lg-6 col-12 ">
