--- a/portfolio-single7.html
+++ b/portfolio-single7.html
@@ -214,7 +214,7 @@
 					<li>More users will complete activation</li>
 					<li>User retention will increase</li>
 					<li>App trust will improve</li>
-					<li>ngagement across transaction services will grow</li>
+					<li>Engagement across transaction services will grow</li>
 				</ol>
 				<p>This became our core design direction.</p>
 			</div>
